@@ -1,5 +1,10 @@
 2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* src/gdict-applet.c (gdict_applet_init):
+	* src/gdict-app.c (gdict_app_init): fix error reporting.
+
+2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* src/gdict-window.c (set_window_default_size),
 	(gdict_window_style_set): port the size allocation code from the applet
 	to the main application, since it's a bit clearer.
